CSS/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  font: normal 100%/1.5 serif;
}

h1, h2, h3, h4, h5, h6,
p, ul, ol, dl, dd, figure,
blockquote, details, hr,
fieldset, pre, table {
  margin: 0 0 1.5rem;
}

html {
    font: normal 100%/1.5 'Lato', sans-serif;
}

h1, h2, h3, h4, h5, h6,
p, ul, ol, dl, dd, figure,
blockquote, details, hr,
fieldset, pre, table {
  margin: 0 0 1.5rem;
}

h1, h2, h3, h4, h5, h6,
.brand-family {
    font-family: 'Lato', sans-serif;
}

p, figcaption, dd, dt, a, label, button,
.brand-family {
    font-family: 'Lato', sans-serif;
}

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {

    html {
        font-size: 110%;
    }
}

@media only screen and (min-width: 90em) {

    html {
        font-size: 120%;
    }
}

@media only screen and (min-width: 120em) {

    html {
        font-size: 130%;
    }
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
}

a:hover,
a:active {
    /* It's okay to get rid of the focus it for mouse users, 
    IT's  NOT OKAY TO REMOVE IT FOR KEYBOARD USERS!!!! */
outline:none;
}

a:focus {
    outline: 3px solid #000;
}
.skip-links {
    margin: 0;
    padding:0;
    list-style-type: none;
}
.skip-links a {
    position: absolute;
    top: -3em;
    background-color: white;
    color: #000;
    text-decoration: none;
    padding: 0.5 0.75em;
    font-size: 1.25em;
}

.skip-links a:focus{
    top: 0;
}

.sectionlight {
    background-color: white;
}
    
img {
    display: block;
    width: 100%;
    margin: 0% auto;
}

figcaption {
    font-family: 'Lato';
    font-style: normal;
    font-weight: 700;
}

.banner{
    overflow: hidden;
    background-color: #FFE500;
}

.logo {
    display: block;
    width: 19em;
}
        
.billboard {
    position: relative;
    padding-top: 3em;
    background-image: url(../images/bannerimage.jpg);
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover; 
    height: 500px;
}
    
h1 {
    text-align: left;
    text-transform: none;
    overflow:hidden;
    display: block;
    width:100%;
    font-family: 'Lato';
    font-style: italic;
    font-weight: 900;
}

.billboard a:hover {
    color:#FFE500;
}
  
.billboard a:active {
    border-color:#FFE500;
}

.billboard a {  
    position:absolute;
    left: 6%;
    border:4px solid white;
    background-color:white;
    color:black;
    font-family: 'Lato', sans-serif;
    text-decoration: none;
    border-color: #FFE500;
    color: #FFE500;
    border-width: 2.5px;
}

.whitetype {
    color: white;
}

.yellowtype {
    color: #FFE500;
}

.nav {
    display:block;
    list-style-type: none;
    background-color: #FFE500;
    padding: 1px;
}

.nav a {
    display: inherit;
    text-decoration: none;
}

.nav a:hover {
    background-color: white;
    border-color: #FFE500;
    color: #FFE500;
    border-style: dashed;
    border-width: 2.5px;
}

h3 {
    margin:0;
    font-family: 'Lato';
    font-style: italic;
    font-weight: 900;
}

.solution {
    background-image:url(../images/yellowbackground.jpg);
    padding:1em;
}
    
label{
    display:block;
}

input + label{
    display:inline-block;
}

.offering {
    height: 100%;
    width: 100%;
    align-content: center;
}

.customers {
    background-color:#81CCD4;
    text-align: center;
}

.quote {
    font-family: 'Lato';
    font-style: italic;
    font-weight: 300;
    text-align: center;
}

.quotename {
    font-family: 'Lato';
    font-style: italic;
    font-weight: 300;
    text-align: right;
}


.textbox{
    width:100%;
    height: 15em;
}

.textinput{
    width:100%;
    height: 2em;
}

.radio{
    white-space: nowrap;
}

.backtotop {
    display: inline-block;
    text-align: right;
} 

.footer {
    width: 100%;
    background-color: #FFE500;
}

.footer ul a::after {
    content: " ·";
}

.footer li:last-child a::after {
    content: none;
}

@media only screen and (min-width: 20em) {

    }
    .logo{
    left: 0px;
    width: 19em;
    }
    
      .nav li{
        display: inline-block;
    }
    
    .nav{
        text-align: center; 
    }   
    .copyright{
        text-align: center;
    }
}

@media only screen and (min-width: 40em) {

    .nav{
        text-align: left; 
    }
    
    .navbottom{
        text-align: right;
    }
    .copyright{
        text-align: left;
    }
    
    .title {
        text-align: left;
    }
}

@media only screen and (min-width: 60em) {
    
    dl {
        overflow: hidden;
    }

    dt {
        float:left;
        clear:left;
        width: 8rem;
    }

    dd {
        float:left;
        margin: 0;
        padding:0;
    }
}

